--- a/profile/bio.html
+++ b/profile/bio.html
@@ -5,16 +5,24 @@
 	<style>
 		body {
 			margin-left: 50px;
-			background: url(moun.jpg);
+			background: url(moun2.jpg);
 			margin-top: 80px;
 		}
 		form {
-			width: 200px;
+			width: 300px;
 			padding: 20px;
 			margin: auto;
-			background: #7a7cbb;
+			background: #262626;
 			font-size: 20px;
-			border-radius: 20px;
+			border-radius: 10px;
+		}
+		p {
+			font-family: Tahoma, Geneva, sans-serif;
+  			color: #fff;
+  			margin-left: 50px;
+		}
+		input[type=text] {
+			margin-left: 50px;
 		}
 		input[type=button] {
 			border: none;
@@ -26,23 +34,23 @@
 			padding: 10px 0;
 			border-radius: 15px;
 			cursor: pointer;
-			margin-left: 50px;
+			margin-left: 110px;
 		}
 	</style>
 </head>
 <body>
 	<form>
-		First Name:<br>
+		<p>First Name:</p>
 		<input type="text" name="fname"><br>
-		Last Name:<br>
+		<p>Last Name:</p>
 		<input type="text" name="lname"><br>
-		Department:<br>
+		<p>Department:</p>
 		<input type="text" name="department"><br>
-		Speciality:<br>
+		<p>Speciality:</p>
 		<input type="text" name="speciality"><br>
-		Email:<br>
+		<p>Email:</p>
 		<input type="text" name="email"><br>
-		Phone:<br>
+		<p>Phone:</p>
 		<input type="text" name="phone"><br>
 		<br>
 		<a href="profile.html"><input type="button" value="Save"></a><br>
